--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>سلامتك الرقمية في الإمارات</title>
+    
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#0f172a">
+
     <style>
         :root {
             --primary-gradient: linear-gradient(135deg, #4158D0 0%, #C850C0 100%);
